--- a/one/templates/layout/master.html
+++ b/one/templates/layout/master.html
@@ -83,6 +83,8 @@
     <input id="id_btn_close_label" value="{% trans 'Close' %}">
     <input id="id_btn_save_label" value="{% trans 'Save' %}">
     <input id="id_btn_save_changes_label" value="{% trans 'Save Changes' %}">
+    <input id="id_btn_delete_item" value="{% trans 'Delete item' %}">
+    <input id="id_btn_update_item" value="{% trans 'Update item' %}">
   </div>
 
   {% block hidden-div %}
