--- a/one/templates/layout/master.html
+++ b/one/templates/layout/master.html
@@ -90,6 +90,9 @@
   {% block hidden-div %}
   {% endblock hidden-div %}
 
+  {% block modal %}
+  {% endblock modal %}
+
 </div>
 
 {% block javascript %}
