--- a/one/templates/partials/menus/user-account-menu.html
+++ b/one/templates/partials/menus/user-account-menu.html
@@ -29,7 +29,7 @@
   <!--end::Menu separator-->
   <!--begin::Menu item-->
   <div class="menu-item px-5">
-    <a href="{% url 'users:detail' request.user.username %}"
+    <a href="{% url 'users:detail' user.username %}"
        class="menu-link px-5">{% translate "My Profile" %}</a>
   </div>
   <!--end::Menu item-->
