--- a/one/templates/partials/theme-mode/menu.html
+++ b/one/templates/partials/theme-mode/menu.html
@@ -7,7 +7,7 @@
     <a href="#" class="menu-link px-3 py-2" data-kt-element="mode" data-kt-value="light">
       <span class="menu-icon"
             data-kt-element="icon">{% get_svg_icon 'duotune/general/gen060.svg' 'svg-icon svg-icon-3' %}</span>
-      <span class="menu-title">Light</span>
+      <span class="menu-title">{% trans 'Light' %}</span>
     </a>
   </div>
   <!--end::Menu item-->
@@ -16,7 +16,7 @@
     <a href="#" class="menu-link px-3 py-2" data-kt-element="mode" data-kt-value="dark">
       <span class="menu-icon"
             data-kt-element="icon">{% get_svg_icon 'duotune/general/gen061.svg' 'svg-icon svg-icon-3' %}</span>
-      <span class="menu-title">Dark</span>
+      <span class="menu-title">{% trans 'Dark' %}</span>
     </a>
   </div>
   <!--end::Menu item-->
@@ -25,7 +25,7 @@
     <a href="#" class="menu-link px-3 py-2" data-kt-element="mode" data-kt-value="system">
       <span class="menu-icon"
             data-kt-element="icon">{% get_svg_icon 'duotune/general/gen062.svg' 'svg-icon svg-icon-3' %}</span>
-      <span class="menu-title">System</span>
+      <span class="menu-title">{% trans 'System' %}</span>
     </a>
   </div>
   <!--end::Menu item-->
