--- a/one/users/templates/users/base.html
+++ b/one/users/templates/users/base.html
@@ -1,292 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <!--begin::Navbar-->
-  <div class="card mb-5 mb-xl-10">
-    <div class="card-body pt-9 pb-0">
-      <!--begin::Details-->
-      <div class="d-flex flex-wrap flex-sm-nowrap mb-3">
-        <!--begin: Pic-->
-        <div class="me-7 mb-4">
-          <div class="symbol symbol-100px symbol-lg-160px symbol-fixed position-relative">
-            <img src="{% static 'media/avatars/300-1.jpg' %}" alt="image"/>
-            <div
-              class="position-absolute translate-middle bottom-0 start-100 mb-6 bg-success rounded-circle border border-4 border-body h-20px w-20px"></div>
-          </div>
-        </div>
-        <!--end::Pic-->
-        <!--begin::Info-->
-        <div class="flex-grow-1">
-          <!--begin::Title-->
-          <div class="d-flex justify-content-between align-items-start flex-wrap mb-2">
-            <!--begin::User-->
-            <div class="d-flex flex-column">
-              <!--begin::Name-->
-              <div class="d-flex align-items-center mb-2">
-                <a href="#" class="text-gray-900 text-hover-primary fs-2 fw-bold me-1">Max Smith</a>
-                <a href="#">
-                  <!--begin::Svg Icon | path: icons/duotune/general/gen026.svg-->
-                  {% get_svg_icon 'duotune/general/gen026.svg' 'svg-icon svg-icon-1 svg-icon-primary' %}
-                  <!--end::Svg Icon-->
-                </a>
-                <a href="#" class="btn btn-sm btn-light-success fw-bold ms-2 fs-8 py-1 px-3" data-bs-toggle="modal"
-                   data-bs-target="#kt_modal_upgrade_plan">Upgrade to Pro</a>
-              </div>
-              <!--end::Name-->
-              <!--begin::Info-->
-              <div class="d-flex flex-wrap fw-semibold fs-6 mb-4 pe-2">
-                <a href="#" class="d-flex align-items-center text-gray-400 text-hover-primary me-5 mb-2">
-                  <!--begin::Svg Icon | path: icons/duotune/communication/com006.svg-->
-                  {% get_svg_icon 'duotune/communication/com006.svg' 'svg-icon svg-icon-4 me-1' %}
-                  <!--end::Svg Icon-->Developer</a>
-                <a href="#" class="d-flex align-items-center text-gray-400 text-hover-primary me-5 mb-2">
-                  <!--begin::Svg Icon | path: icons/duotune/general/gen018.svg-->
-                  {% get_svg_icon 'duotune/general/gen018.svg' 'svg-icon svg-icon-4 me-1' %}
-                  <!--end::Svg Icon-->SF, Bay Area</a>
-                <a href="#" class="d-flex align-items-center text-gray-400 text-hover-primary mb-2">
-                  <!--begin::Svg Icon | path: icons/duotune/communication/com011.svg-->
-                  {% get_svg_icon 'duotune/communication/com011.svg' 'svg-icon svg-icon-4 me-1' %}
-                  <!--end::Svg Icon-->max@kt.com</a>
-              </div>
-              <!--end::Info-->
-            </div>
-            <!--end::User-->
-            <!--begin::Actions-->
-            <div class="d-flex my-4">
-              <a href="#" class="btn btn-sm btn-light me-2" id="kt_user_follow_button">
-                <!--begin::Svg Icon | path: icons/duotune/arrows/arr012.svg-->
-                {% get_svg_icon 'duotune/arrows/arr012.svg' 'svg-icon svg-icon-3 d-none' %}
-                <!--end::Svg Icon-->
-                <!--begin::Indicator label-->
-                <span class="indicator-label">Follow</span>
-                <!--end::Indicator label-->
-                <!--begin::Indicator progress-->
-                <span class="indicator-progress">Please wait...
-																<span class="spinner-border spinner-border-sm align-middle ms-2"></span></span>
-                <!--end::Indicator progress-->
-              </a>
-              <a href="#" class="btn btn-sm btn-primary me-2" data-bs-toggle="modal"
-                 data-bs-target="#kt_modal_offer_a_deal">Hire Me</a>
-              <!--begin::Menu-->
-              <div class="me-0">
-                <button class="btn btn-sm btn-icon btn-bg-light btn-active-color-primary" data-kt-menu-trigger="click"
-                        data-kt-menu-placement="bottom-end">
-                  <i class="bi bi-three-dots fs-3"></i>
-                </button>
-                <!--begin::Menu 3-->
-                <div
-                  class="menu menu-sub menu-sub-dropdown menu-column menu-rounded menu-gray-800 menu-state-bg-light-primary fw-semibold w-200px py-3"
-                  data-kt-menu="true">
-                  <!--begin::Heading-->
-                  <div class="menu-item px-3">
-                    <div class="menu-content text-muted pb-2 px-3 fs-7 text-uppercase">Payments</div>
-                  </div>
-                  <!--end::Heading-->
-                  <!--begin::Menu item-->
-                  <div class="menu-item px-3">
-                    <a href="#" class="menu-link px-3">Create Invoice</a>
-                  </div>
-                  <!--end::Menu item-->
-                  <!--begin::Menu item-->
-                  <div class="menu-item px-3">
-                    <a href="#" class="menu-link flex-stack px-3">Create Payment
-                      <i class="fas fa-exclamation-circle ms-2 fs-7" data-bs-toggle="tooltip"
-                         title="Specify a target name for future usage and reference"></i></a>
-                  </div>
-                  <!--end::Menu item-->
-                  <!--begin::Menu item-->
-                  <div class="menu-item px-3">
-                    <a href="#" class="menu-link px-3">Generate Bill</a>
-                  </div>
-                  <!--end::Menu item-->
-                  <!--begin::Menu item-->
-                  <div class="menu-item px-3" data-kt-menu-trigger="hover" data-kt-menu-placement="right-end">
-                    <a href="#" class="menu-link px-3">
-                      <span class="menu-title">Subscription</span>
-                      <span class="menu-arrow"></span>
-                    </a>
-                    <!--begin::Menu sub-->
-                    <div class="menu-sub menu-sub-dropdown w-175px py-4">
-                      <!--begin::Menu item-->
-                      <div class="menu-item px-3">
-                        <a href="#" class="menu-link px-3">Plans</a>
-                      </div>
-                      <!--end::Menu item-->
-                      <!--begin::Menu item-->
-                      <div class="menu-item px-3">
-                        <a href="#" class="menu-link px-3">Billing</a>
-                      </div>
-                      <!--end::Menu item-->
-                      <!--begin::Menu item-->
-                      <div class="menu-item px-3">
-                        <a href="#" class="menu-link px-3">Statements</a>
-                      </div>
-                      <!--end::Menu item-->
-                      <!--begin::Menu separator-->
-                      <div class="separator my-2"></div>
-                      <!--end::Menu separator-->
-                      <!--begin::Menu item-->
-                      <div class="menu-item px-3">
-                        <div class="menu-content px-3">
-                          <!--begin::Switch-->
-                          <label class="form-check form-switch form-check-custom form-check-solid">
-                            <!--begin::Input-->
-                            <input class="form-check-input w-30px h-20px" type="checkbox" value="1" checked="checked"
-                                   name="notifications"/>
-                            <!--end::Input-->
-                            <!--end::Label-->
-                            <span class="form-check-label text-muted fs-6">Recuring</span>
-                            <!--end::Label-->
-                          </label>
-                          <!--end::Switch-->
-                        </div>
-                      </div>
-                      <!--end::Menu item-->
-                    </div>
-                    <!--end::Menu sub-->
-                  </div>
-                  <!--end::Menu item-->
-                  <!--begin::Menu item-->
-                  <div class="menu-item px-3 my-1">
-                    <a href="#" class="menu-link px-3">Settings</a>
-                  </div>
-                  <!--end::Menu item-->
-                </div>
-                <!--end::Menu 3-->
-              </div>
-              <!--end::Menu-->
-            </div>
-            <!--end::Actions-->
-          </div>
-          <!--end::Title-->
-          <!--begin::Stats-->
-          <div class="d-flex flex-wrap flex-stack">
-            <!--begin::Wrapper-->
-            <div class="d-flex flex-column flex-grow-1 pe-8">
-              <!--begin::Stats-->
-              <div class="d-flex flex-wrap">
-                <!--begin::Stat-->
-                <div class="border border-gray-300 border-dashed rounded min-w-125px py-3 px-4 me-6 mb-3">
-                  <!--begin::Number-->
-                  <div class="d-flex align-items-center">
-                    <!--begin::Svg Icon | path: icons/duotune/arrows/arr066.svg-->
-                    {% get_svg_icon 'duotune/arrows/arr066.svg' 'svg-icon svg-icon-3 svg-icon-success me-2' %}
-                    <!--end::Svg Icon-->
-                    <div class="fs-2 fw-bold" data-kt-countup="true" data-kt-countup-value="4500"
-                         data-kt-countup-prefix="$">0
-                    </div>
-                  </div>
-                  <!--end::Number-->
-                  <!--begin::Label-->
-                  <div class="fw-semibold fs-6 text-gray-400">Earnings</div>
-                  <!--end::Label-->
-                </div>
-                <!--end::Stat-->
-                <!--begin::Stat-->
-                <div class="border border-gray-300 border-dashed rounded min-w-125px py-3 px-4 me-6 mb-3">
-                  <!--begin::Number-->
-                  <div class="d-flex align-items-center">
-                    <!--begin::Svg Icon | path: icons/duotune/arrows/arr065.svg-->
-                    {% get_svg_icon 'duotune/arrows/arr065.svg' 'svg-icon svg-icon-3 svg-icon-danger me-2' %}
-                    <!--end::Svg Icon-->
-                    <div class="fs-2 fw-bold" data-kt-countup="true" data-kt-countup-value="75">0</div>
-                  </div>
-                  <!--end::Number-->
-                  <!--begin::Label-->
-                  <div class="fw-semibold fs-6 text-gray-400">Projects</div>
-                  <!--end::Label-->
-                </div>
-                <!--end::Stat-->
-                <!--begin::Stat-->
-                <div class="border border-gray-300 border-dashed rounded min-w-125px py-3 px-4 me-6 mb-3">
-                  <!--begin::Number-->
-                  <div class="d-flex align-items-center">
-                    <!--begin::Svg Icon | path: icons/duotune/arrows/arr066.svg-->
-                    {% get_svg_icon 'duotune/arrows/arr066.svg' 'svg-icon svg-icon-3 svg-icon-success me-2' %}
-                    <!--end::Svg Icon-->
-                    <div class="fs-2 fw-bold" data-kt-countup="true" data-kt-countup-value="60"
-                         data-kt-countup-prefix="%">0
-                    </div>
-                  </div>
-                  <!--end::Number-->
-                  <!--begin::Label-->
-                  <div class="fw-semibold fs-6 text-gray-400">Success Rate</div>
-                  <!--end::Label-->
-                </div>
-                <!--end::Stat-->
-              </div>
-              <!--end::Stats-->
-            </div>
-            <!--end::Wrapper-->
-            <!--begin::Progress-->
-            <div class="d-flex align-items-center w-200px w-sm-300px flex-column mt-3">
-              <div class="d-flex justify-content-between w-100 mt-auto mb-2">
-                <span class="fw-semibold fs-6 text-gray-400">Profile Compleation</span>
-                <span class="fw-bold fs-6">50%</span>
-              </div>
-              <div class="h-5px mx-3 w-100 bg-light mb-3">
-                <div class="bg-success rounded h-5px" role="progressbar" style="width: 50%;" aria-valuenow="50"
-                     aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-            <!--end::Progress-->
-          </div>
-          <!--end::Stats-->
-        </div>
-        <!--end::Info-->
-      </div>
-      <!--end::Details-->
-      <!--begin::Navs-->
-      <ul class="nav nav-stretch nav-line-tabs nav-line-tabs-2x border-transparent fs-5 fw-bold">
-        <!--begin::Nav item-->
-        <li class="nav-item mt-2">
-          <a class="nav-link text-active-primary ms-0 me-10 py-5 active" href="../../demo1/dist/account/overview.html">Overview</a>
-        </li>
-        <!--end::Nav item-->
-        <!--begin::Nav item-->
-        <li class="nav-item mt-2">
-          <a class="nav-link text-active-primary ms-0 me-10 py-5"
-             href="../../demo1/dist/account/settings.html">Settings</a>
-        </li>
-        <!--end::Nav item-->
-        <!--begin::Nav item-->
-        <li class="nav-item mt-2">
-          <a class="nav-link text-active-primary ms-0 me-10 py-5"
-             href="../../demo1/dist/account/security.html">Security</a>
-        </li>
-        <!--end::Nav item-->
-        <!--begin::Nav item-->
-        <li class="nav-item mt-2">
-          <a class="nav-link text-active-primary ms-0 me-10 py-5"
-             href="../../demo1/dist/account/billing.html">Billing</a>
-        </li>
-        <!--end::Nav item-->
-        <!--begin::Nav item-->
-        <li class="nav-item mt-2">
-          <a class="nav-link text-active-primary ms-0 me-10 py-5" href="../../demo1/dist/account/statements.html">Statements</a>
-        </li>
-        <!--end::Nav item-->
-        <!--begin::Nav item-->
-        <li class="nav-item mt-2">
-          <a class="nav-link text-active-primary ms-0 me-10 py-5" href="../../demo1/dist/account/referrals.html">Referrals</a>
-        </li>
-        <!--end::Nav item-->
-        <!--begin::Nav item-->
-        <li class="nav-item mt-2">
-          <a class="nav-link text-active-primary ms-0 me-10 py-5" href="../../demo1/dist/account/api-keys.html">API
-            Keys</a>
-        </li>
-        <!--end::Nav item-->
-        <!--begin::Nav item-->
-        <li class="nav-item mt-2">
-          <a class="nav-link text-active-primary ms-0 me-10 py-5" href="../../demo1/dist/account/logs.html">Logs</a>
-        </li>
-        <!--end::Nav item-->
-      </ul>
-      <!--begin::Navs-->
+<!--begin::Layout-->
+  <div class="d-flex flex-column flex-lg-row">
+    {% include 'users/sidebar.html' %}
+    <!--begin::Content-->
+    <div class="flex-lg-row-fluid ms-lg-15">
+      {% block inner_content %}
+      {% endblock inner_content %}
     </div>
+    <!--end::Content-->
   </div>
-  <!--end::Navbar-->
-  {% block inner %}
-  {% endblock inner %}
+<!--end::Layout-->
 {% endblock content %}
