--- a/one/users/templates/users/user_detail.html
+++ b/one/users/templates/users/user_detail.html
@@ -531,12 +531,30 @@
       const actions = document.getElementsByName('action_remove');
       if (actions.length) {
         actions[0].addEventListener("click", function (e) {
-          if (!confirm(message)) {
-            e.preventDefault();
-          }
+          e.preventDefault();
+          Swal.fire({
+            text: message || "Are you sure you want to delete this(these) record?",
+            icon: "warning",
+            showCancelButton: true,
+            buttonsStyling: false,
+            confirmButtonText: "Yes, delete!",
+            cancelButtonText: "No, cancel",
+            customClass: {
+              confirmButton: "btn fw-bold btn-danger", cancelButton: "btn fw-bold btn-active-light-primary",
+            },
+          }).then(function (result) {
+            if (result.isConfirmed) {
+              console.log('result--------', result)
+              Array.from(document.getElementsByClassName('form-group')).forEach(x => x.classList.remove('row'));
+            }
+          })
+
+          //if (!confirm(message)) {
+          //e.preventDefault();
+          //}
         });
       }
-      Array.from(document.getElementsByClassName('form-group')).forEach(x => x.classList.remove('row'));
+      //Array.from(document.getElementsByClassName('form-group')).forEach(x => x.classList.remove('row'));
     });
   </script>
 
